window["components/old-ui/components/layout/footer.tsx"] = {
  "content": "const AppFooter = ({ name, corp }) => {\n  return (\n    <footer className={\"mx-auto w-[1250px] px-6 pb-20 pt-16\"}>\n      <div\n        style={{ fontSize: \"20px\", fontWeight: \"bolder\", marginBottom: \"20px\" }}\n      >\n        {name}\n      </div>\n      Copyright Â© 2024 {corp}, Inc. All rights reserved.\n    </footer>\n  );\n};\n\nexport default AppFooter;\n",
  "coverage": {
    "path": "components/old-ui/components/layout/footer.tsx",
    "b": {},
    "f": {
      "0": 57
    },
    "s": {
      "0": 8,
      "1": 57
    },
    "branchMap": {},
    "fnMap": {
      "0": {
        "name": "(anonymous_0)",
        "decl": {
          "start": {
            "line": 1,
            "column": 18
          },
          "end": {
            "line": 1,
            "column": 19
          }
        },
        "loc": {
          "start": {
            "line": 1,
            "column": 38
          },
          "end": {
            "line": 12,
            "column": 1
          }
        },
        "line": 1
      }
    },
    "statementMap": {
      "0": {
        "start": {
          "line": 1,
          "column": 18
        },
        "end": {
          "line": 12,
          "column": 1
        }
      },
      "1": {
        "start": {
          "line": 2,
          "column": 2
        },
        "end": {
          "line": 11,
          "column": 4
        }
      }
    }
  }
}